--- a/galeria.html
+++ b/galeria.html
@@ -72,8 +72,60 @@
 				</div>
 			</div>
 		</div>
-		<div class="row" id="mid-content">
-			
+		<div class="row justify-content-around" id="mid-content">
+			<div class="col-11 gallery">
+				<div class="row justify-content-around justify-content-md-between">
+					<div class="col-12 gallery-title">
+						ENTRENAMIENTOS
+					</div>
+					<div class="col-11 col-md gallery-thb">
+						<img src="img/loicas_mcc.jpg" class="img-fluid" alt="">
+					</div>
+					<div class="col-11 col-md gallery-thb">
+						<img src="img/loicas_mcc.jpg" class="img-fluid" alt="">
+					</div>
+					<div class="col-11 col-md gallery-thb">
+						<img src="img/loicas_mcc.jpg" class="img-fluid" alt="">
+					</div>
+					<div class="col-11 col-md gallery-thb">
+						<img src="img/loicas_mcc.jpg" class="img-fluid" alt="">
+					</div>
+				</div>
+				<div class="row justify-content-between">
+					<div class="col-12 gallery-title">
+						TORNEOS
+					</div>
+					<div class="col-11 col-md gallery-thb">
+						<img src="img/loicas_mcc.jpg" class="img-fluid" alt="">
+					</div>
+					<div class="col-11 col-md gallery-thb">
+						<img src="img/loicas_mcc.jpg" class="img-fluid" alt="">
+					</div>
+					<div class="col-11 col-md gallery-thb">
+						<img src="img/loicas_mcc.jpg" class="img-fluid" alt="">
+					</div>
+					<div class="col-11 col-md gallery-thb">
+						<img src="img/loicas_mcc.jpg" class="img-fluid" alt="">
+					</div>
+				</div>
+				<div class="row justify-content-between">
+					<div class="col-12 gallery-title">
+						EVENTOS
+					</div>
+					<div class="col-11 col-md gallery-thb">
+						<img src="img/loicas_mcc.jpg" class="img-fluid" alt="">
+					</div>
+					<div class="col-11 col-md gallery-thb">
+						<img src="img/loicas_mcc.jpg" class="img-fluid" alt="">
+					</div>
+					<div class="col-11 col-md gallery-thb">
+						<img src="img/loicas_mcc.jpg" class="img-fluid" alt="">
+					</div>
+					<div class="col-11 col-md gallery-thb">
+						<img src="img/loicas_mcc.jpg" class="img-fluid" alt="">
+					</div>
+				</div>
+			</div>
 		</div>
 		<div class="row justify-content-between align-items-center" id="bottom-bar">
 			<div class="col-8 offset-2 col-md-2 offset-md-0" id="bottom-rrss">
