--- a/historia.html
+++ b/historia.html
@@ -117,7 +117,7 @@
 						</ol>
 					</div>
 					<div class="col-12 col-md-8 order-1 order-md-2 text-center">
-						<img class="img-fluid img-team" src="img/loicas_logo.png" alt="LOGO LOICAS"></img>
+						<img class="img-fluid img-team" src="img/2010.jpg" alt="LOGO LOICAS"></img>
 					</div>
 				</div>
 				<div class="row content-card"id="wsac-2011">
@@ -143,7 +143,7 @@
 						</ol>
 					</div>
 					<div class="col-12 col-md-8 order-1 order-md-2 text-center">
-						<img class="img-fluid img-team" src="img/loicas_logo.png" alt="LOGO LOICAS"></img>
+						<img class="img-fluid img-team" src="img/2011.jpg" alt="LOGO LOICAS"></img>
 					</div>
 				</div>
 				<div class="row content-card"id="serie-2012">
@@ -171,7 +171,7 @@
 						</ol>
 					</div>
 					<div class="col-12 col-md-8 order-1 order-md-2 text-center">
-						<img class="img-fluid img-team" src="img/loicas_logo.png" alt="LOGO LOICAS"></img>
+						<img class="img-fluid img-team" src="img/2012.jpg" alt="LOGO LOICAS"></img>
 					</div>
 				</div>
 				<div class="row content-card" id="wsac-2013">
@@ -197,7 +197,7 @@
 						</ol>
 					</div>
 					<div class="col-12 col-md-8 order-1 order-md-2 text-center">
-						<img class="img-fluid img-team" src="img/loicas_logo.png" alt="LOGO LOICAS"></img>
+						<img class="img-fluid img-team" src="img/2013.jpg" alt="LOGO LOICAS"></img>
 					</div>
 				</div>
 				<div class="row content-card" id="wsac-2015">
@@ -228,7 +228,7 @@
 						</ol>
 					</div>
 					<div class="col-12 col-md-8 order-1 order-md-2 text-center">
-						<img class="img-fluid img-team" src="img/loicas_logo.png" alt="LOGO LOICAS"></img>
+						<img class="img-fluid img-team" src="img/2015.jpg" alt="LOGO LOICAS"></img>
 					</div>
 				</div>
 				<div class="row content-card" id="wsac-2017">
@@ -256,7 +256,7 @@
 						</ol>
 					</div>
 					<div class="col-12 col-md-8 order-1 order-md-2 text-center">
-						<img class="img-fluid img-team" src="img/loicas_logo.png" alt="LOGO LOICAS"></img>
+						<img class="img-fluid img-team" src="img/2017.jpg" alt="LOGO LOICAS"></img>
 					</div>
 				</div>
 				<div class="row content-card" id="wsac-2018">
