mejora imagen titular version small

--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
 						</div>
 					</div>
 					<div class="col-12 d-sm-none">
-						<img src="https://scontent.fscl3-1.fna.fbcdn.net/v/t31.0-8/28071294_354938448321773_4312152071216932523_o.jpg?_nc_cat=0&oh=91446d244686b05b82f797a8ec15ecb4&oe=5BC42ABC" alt="LasLoicasCricketChile" class="img-fluid">
+						<img src="img/title-sm.jpg" alt="LasLoicasCricketChile" class="img-fluid">
 					</div>
 				</div>
 				<div class="row content-card">
