--- a/galeria.html
+++ b/galeria.html
@@ -78,51 +78,63 @@
 					<div class="col-12 gallery-title">
 						ENTRENAMIENTOS
 					</div>
-					<div class="col-11 col-md gallery-thb">
-						<img src="img/loicas_mcc.jpg" class="img-fluid" alt="">
-					</div>
-					<div class="col-11 col-md gallery-thb">
-						<img src="img/loicas_mcc.jpg" class="img-fluid" alt="">
-					</div>
-					<div class="col-11 col-md gallery-thb">
-						<img src="img/loicas_mcc.jpg" class="img-fluid" alt="">
-					</div>
-					<div class="col-11 col-md gallery-thb">
-						<img src="img/loicas_mcc.jpg" class="img-fluid" alt="">
+					<div class="col-12 gallery-thb-sqr">
+						<div class="row justify-content-center ">
+							<div class="col-5 col-md gallery-thb">
+								<img src="img/loicas_mcc.jpg" class="img-fluid" alt="">
+							</div>
+							<div class="col-5 col-md gallery-thb">
+								<img src="img/loicas_mcc.jpg" class="img-fluid" alt="">
+							</div>
+							<div class="col-5 col-md gallery-thb">
+								<img src="img/loicas_mcc.jpg" class="img-fluid" alt="">
+							</div>
+							<div class="col-5 col-md gallery-thb">
+								<img src="img/loicas_mcc.jpg" class="img-fluid" alt="">
+							</div>
+						</div>
 					</div>
 				</div>
 				<div class="row justify-content-between">
 					<div class="col-12 gallery-title">
 						TORNEOS
 					</div>
-					<div class="col-11 col-md gallery-thb">
-						<img src="img/loicas_mcc.jpg" class="img-fluid" alt="">
-					</div>
-					<div class="col-11 col-md gallery-thb">
-						<img src="img/loicas_mcc.jpg" class="img-fluid" alt="">
-					</div>
-					<div class="col-11 col-md gallery-thb">
-						<img src="img/loicas_mcc.jpg" class="img-fluid" alt="">
-					</div>
-					<div class="col-11 col-md gallery-thb">
-						<img src="img/loicas_mcc.jpg" class="img-fluid" alt="">
+					<div class="col-12 gallery-thb-sqr">
+						<div class="row justify-content-center">
+							<div class="col-5 col-md gallery-thb">
+								<img src="img/loicas_mcc.jpg" class="img-fluid" alt="">
+							</div>
+							<div class="col-5 col-md gallery-thb">
+								<img src="img/loicas_mcc.jpg" class="img-fluid" alt="">
+							</div>
+							<div class="col-5 col-md gallery-thb">
+								<img src="img/loicas_mcc.jpg" class="img-fluid" alt="">
+							</div>
+							<div class="col-5 col-md gallery-thb">
+								<img src="img/loicas_mcc.jpg" class="img-fluid" alt="">
+							</div>
+						</div>
 					</div>
 				</div>
 				<div class="row justify-content-between">
 					<div class="col-12 gallery-title">
 						EVENTOS
 					</div>
-					<div class="col-11 col-md gallery-thb">
-						<img src="img/loicas_mcc.jpg" class="img-fluid" alt="">
-					</div>
-					<div class="col-11 col-md gallery-thb">
-						<img src="img/loicas_mcc.jpg" class="img-fluid" alt="">
-					</div>
-					<div class="col-11 col-md gallery-thb">
-						<img src="img/loicas_mcc.jpg" class="img-fluid" alt="">
-					</div>
-					<div class="col-11 col-md gallery-thb">
-						<img src="img/loicas_mcc.jpg" class="img-fluid" alt="">
+					<div class="col-12 gallery-thb-sqr">
+						<div class="row justify-content-center">
+							<div class="col-5 col-md gallery-thb">
+								<img src="img/loicas_mcc.jpg" class="img-fluid" alt="">
+							</div>
+							<div class="col-5 col-md gallery-thb">
+								<img src="img/loicas_mcc.jpg" class="img-fluid" alt="">
+							</div>
+							<div class="col-5 col-md gallery-thb">
+								<img src="img/loicas_mcc.jpg" class="img-fluid" alt="">
+							</div>
+							<div class="col-5 col-md gallery-thb">
+								<img src="img/loicas_mcc.jpg" class="img-fluid" alt="">
+							</div>
+						</div>
 					</div>
 				</div>
 			</div>
