miniaturas en galerias y subida de imágenes

--- a/galeria.html
+++ b/galeria.html
@@ -81,16 +81,16 @@
 					<div class="col-12 gallery-thb-sqr">
 						<div class="row justify-content-center ">
 							<div class="col-5 col-md gallery-thb">
-								<img src="img/loicas_mcc.jpg" class="img-fluid" alt="">
+								<a href="" title=""><img src="img/gallery-entr-thb-01.jpg" class="img-fluid" alt=""></a>
 							</div>
 							<div class="col-5 col-md gallery-thb">
-								<img src="img/loicas_mcc.jpg" class="img-fluid" alt="">
+								<a href="" title=""><img src="img/gallery-entr-thb-02.jpg" class="img-fluid" alt=""></a>
 							</div>
 							<div class="col-5 col-md gallery-thb">
-								<img src="img/loicas_mcc.jpg" class="img-fluid" alt="">
+								<a href="" title=""><img src="img/gallery-entr-thb-03.jpg" class="img-fluid" alt=""></a>
 							</div>
 							<div class="col-5 col-md gallery-thb">
-								<img src="img/loicas_mcc.jpg" class="img-fluid" alt="">
+								<a href="" title=""><img src="img/gallery-entr-thb-04.jpg" class="img-fluid" alt=""></a>
 							</div>
 						</div>
 					</div>
@@ -102,16 +102,16 @@
 					<div class="col-12 gallery-thb-sqr">
 						<div class="row justify-content-center">
 							<div class="col-5 col-md gallery-thb">
-								<img src="img/loicas_mcc.jpg" class="img-fluid" alt="">
+								<a href="" title=""><img src="img/gallery-trn-thb-01.jpg" class="img-fluid" alt=""></a>
 							</div>
 							<div class="col-5 col-md gallery-thb">
-								<img src="img/loicas_mcc.jpg" class="img-fluid" alt="">
+								<a href="" title=""><img src="img/gallery-trn-thb-02.jpg" class="img-fluid" alt=""></a>
 							</div>
 							<div class="col-5 col-md gallery-thb">
-								<img src="img/loicas_mcc.jpg" class="img-fluid" alt="">
+								<a href="" title=""><img src="img/gallery-trn-thb-03.jpg" class="img-fluid" alt=""></a>
 							</div>
 							<div class="col-5 col-md gallery-thb">
-								<img src="img/loicas_mcc.jpg" class="img-fluid" alt="">
+								<a href="" title=""><img src="img/gallery-trn-thb-04.jpg" class="img-fluid" alt=""></a>
 							</div>
 						</div>
 					</div>
@@ -123,16 +123,16 @@
 					<div class="col-12 gallery-thb-sqr">
 						<div class="row justify-content-center">
 							<div class="col-5 col-md gallery-thb">
-								<img src="img/loicas_mcc.jpg" class="img-fluid" alt="">
+								<a href="" title=""><img src="img/gallery-evnt-thb-01.jpg" class="img-fluid" alt=""></a>
 							</div>
 							<div class="col-5 col-md gallery-thb">
-								<img src="img/loicas_mcc.jpg" class="img-fluid" alt="">
+								<a href="" title=""><img src="img/gallery-evnt-thb-02.jpg" class="img-fluid" alt=""></a>
 							</div>
 							<div class="col-5 col-md gallery-thb">
-								<img src="img/loicas_mcc.jpg" class="img-fluid" alt="">
+								<a href="" title=""><img src="img/gallery-evnt-thb-03.jpg" class="img-fluid" alt=""></a>
 							</div>
 							<div class="col-5 col-md gallery-thb">
-								<img src="img/loicas_mcc.jpg" class="img-fluid" alt="">
+								<a href="" title=""><img src="img/gallery-evnt-thb-04.jpg" class="img-fluid" alt=""></a>
 							</div>
 						</div>
 					</div>
