creacion de galerias y optimizacion de imagenes

--- a/galeria/eventos.html
+++ b/galeria/eventos.html
@@ -11,31 +11,31 @@
 	<!-- FontAwesome -->
 	<link rel="stylesheet" href="https://use.fontawesome.com/916afa4cb3.css">
 	<!-- Fav Icon-->
-	<link rel="apple-touch-icon" sizes="57x57" href="icn/apple-icon-57x57.png">
-	<link rel="apple-touch-icon" sizes="60x60" href="icn/apple-icon-60x60.png">
-	<link rel="apple-touch-icon" sizes="72x72" href="icn/apple-icon-72x72.png">
-	<link rel="apple-touch-icon" sizes="76x76" href="icn/apple-icon-76x76.png">
-	<link rel="apple-touch-icon" sizes="114x114" href="icn/apple-icon-114x114.png">
-	<link rel="apple-touch-icon" sizes="120x120" href="icn/apple-icon-120x120.png">
-	<link rel="apple-touch-icon" sizes="144x144" href="icn/apple-icon-144x144.png">
-	<link rel="apple-touch-icon" sizes="152x152" href="icn/apple-icon-152x152.png">
-	<link rel="apple-touch-icon" sizes="180x180" href="icn/apple-icon-180x180.png">
-	<link rel="icon" type="image/png" sizes="192x192"  href="icn/android-icon-192x192.png">
-	<link rel="icon" type="image/png" sizes="32x32" href="icn/favicon-32x32.png">
-	<link rel="icon" type="image/png" sizes="96x96" href="icn/favicon-96x96.png">
-	<link rel="icon" type="image/png" sizes="16x16" href="icn/favicon-16x16.png">
-	<link rel="manifest" href="icn/manifest.json">
+	<link rel="apple-touch-icon" sizes="57x57" href="../icn/apple-icon-57x57.png">
+	<link rel="apple-touch-icon" sizes="60x60" href="../icn/apple-icon-60x60.png">
+	<link rel="apple-touch-icon" sizes="72x72" href="../icn/apple-icon-72x72.png">
+	<link rel="apple-touch-icon" sizes="76x76" href="../icn/apple-icon-76x76.png">
+	<link rel="apple-touch-icon" sizes="114x114" href="../icn/apple-icon-114x114.png">
+	<link rel="apple-touch-icon" sizes="120x120" href="../icn/apple-icon-120x120.png">
+	<link rel="apple-touch-icon" sizes="144x144" href="../icn/apple-icon-144x144.png">
+	<link rel="apple-touch-icon" sizes="152x152" href="../icn/apple-icon-152x152.png">
+	<link rel="apple-touch-icon" sizes="180x180" href="../icn/apple-icon-180x180.png">
+	<link rel="icon" type="image/png" sizes="192x192"  href="../icn/android-icon-192x192.png">
+	<link rel="icon" type="image/png" sizes="32x32" href="../icn/favicon-32x32.png">
+	<link rel="icon" type="image/png" sizes="96x96" href="../icn/favicon-96x96.png">
+	<link rel="icon" type="image/png" sizes="16x16" href="../icn/favicon-16x16.png">
+	<link rel="manifest" href="../icn/manifest.json">
 	<meta name="msapplication-TileColor" content="#ffffff">
-	<meta name="msapplication-TileImage" content="icn/ms-icon-144x144.png">
+	<meta name="msapplication-TileImage" content="../icn/ms-icon-144x144.png">
 	<meta name="theme-color" content="#ffffff">
 	<!-- Custom CSS -->
-	<link rel="stylesheet" type="text/css" href="style.css">
+	<link rel="stylesheet" type="text/css" href="../style.css">
 </head>
 <body>
 	<div class="container">
 		<div class="row align-items-center text-center" id="top-bar">
 			<div class="col-12 col-md-2" id="logo">
-				<a href="index.html" title=""><img class="img-fluid top-logo" src="img/loicas_logo.png" alt="LOGO LOICAS"></img></a>
+				<a href="index.html" title=""><img class="img-fluid top-logo" src="../img/loicas_logo.png" alt="LOGO LOICAS"></img></a>
 			</div>
 			<div class="col-12 col-md-10" id="top-navbar">
 				<div class="row align-items-center justify-content-center justify-content-md-left">
@@ -76,63 +76,57 @@
 			<div class="col-11 gallery">
 				<div class="row justify-content-around justify-content-md-between">
 					<div class="col-12 gallery-title">
-						<a href="galeria/entrenamientos.html" title="Entrenamientos">ENTRENAMIENTOS</a>
+						GIRA MCC
 					</div>
 					<div class="col-12 gallery-thb-sqr">
 						<div class="row justify-content-center ">
-							<div class="col-5 col-md gallery-thb text-center">
-								<a href="galeria/entrenamientos.html" title=""><img src="img/gallery-entr-thb-01.jpg" class="img-fluid" alt=""></a>
+							<div class="col-5 col-md-3 gallery-thb">
+								<a href="../img/event_mcccl_001.jpg" title=""><img src="../img/event_mcccl_001_thb.jpg" class="img-fluid" alt=""></a>
 							</div>
-							<div class="col-5 col-md gallery-thb text-center">
-								<a href="galeria/entrenamientos.html" title=""><img src="img/gallery-entr-thb-02.jpg" class="img-fluid" alt=""></a>
+							<div class="col-5 col-md-3 gallery-thb">
+								<a href="../img/event_mcccl_002.jpg" title=""><img src="../img/event_mcccl_002_thb.jpg" class="img-fluid" alt=""></a>
 							</div>
-							<div class="col-5 col-md gallery-thb text-center">
-								<a href="galeria/entrenamientos.html" title=""><img src="img/gallery-entr-thb-03.jpg" class="img-fluid" alt=""></a>
+							<div class="col-5 col-md-3 gallery-thb">
+								<a href="../img/event_mcccl_003.jpg" title=""><img src="../img/event_mcccl_003_thb.jpg" class="img-fluid" alt=""></a>
 							</div>
-							<div class="col-5 col-md gallery-thb text-center">
-								<a href="galeria/entrenamientos.html" title=""><img src="img/gallery-entr-thb-04.jpg" class="img-fluid" alt=""></a>
+							<div class="col-5 col-md-3 gallery-thb">
+								<a href="../img/event_mcccl_004.jpg" title=""><img src="../img/event_mcccl_004_thb.jpg" class="img-fluid" alt=""></a>
 							</div>
-						</div>
-					</div>
-				</div>
-				<div class="row justify-content-between">
-					<div class="col-12 gallery-title">
-						<a href="galeria/torneos.html" title="Torneos">TORNEOS</a>
-					</div>
-					<div class="col-12 gallery-thb-sqr">
-						<div class="row justify-content-center">
-							<div class="col-5 col-md gallery-thb text-center">
-								<a href="galeria/torneos.html" title=""><img src="img/gallery-trn-thb-01.jpg" class="img-fluid" alt=""></a>
+							<div class="col-5 col-md-3 gallery-thb">
+								<a href="../img/event_mcccl_005.jpg" title=""><img src="../img/event_mcccl_005_thb.jpg" class="img-fluid" alt=""></a>
 							</div>
-							<div class="col-5 col-md gallery-thb text-center">
-								<a href="galeria/torneos.html" title=""><img src="img/gallery-trn-thb-02.jpg" class="img-fluid" alt=""></a>
-							</div>
-							<div class="col-5 col-md gallery-thb text-center">
-								<a href="galeria/torneos.html" title=""><img src="img/gallery-trn-thb-03.jpg" class="img-fluid" alt=""></a>
-							</div>
-							<div class="col-5 col-md gallery-thb text-center">
-								<a href="galeria/torneos.html" title=""><img src="img/gallery-trn-thb-04.jpg" class="img-fluid" alt=""></a>
+							<div class="col-5 col-md-3 gallery-thb">
+								<a href="../img/event_mcccl_006.jpg" title=""><img src="../img/event_mcccl_006_thb.jpg" class="img-fluid" alt=""></a>
 							</div>
 						</div>
 					</div>
 				</div>
 				<div class="row justify-content-between">
 					<div class="col-12 gallery-title">
-						<a href="galeria/eventos.html" title="Eventos">EVENTOS</a>
+						BORDA TU LOICA
 					</div>
 					<div class="col-12 gallery-thb-sqr">
 						<div class="row justify-content-center">
-							<div class="col-5 col-md gallery-thb text-center">
-								<a href="galeria/eventos.html" title=""><img src="img/gallery-evnt-thb-01.jpg" class="img-fluid" alt=""></a>
+							<div class="col-5 col-md-3 gallery-thb">
+								<a href="../img/event_btl_001.jpg" title=""><img src="../img/event_btl_001_thb.jpg" class="img-fluid" alt=""></a>
 							</div>
-							<div class="col-5 col-md gallery-thb text-center">
-								<a href="galeria/eventos.html" title=""><img src="img/gallery-evnt-thb-02.jpg" class="img-fluid" alt=""></a>
+							<div class="col-5 col-md-3 gallery-thb">
+								<a href="../img/event_btl_002.jpg" title=""><img src="../img/event_btl_002_thb.jpg" class="img-fluid" alt=""></a>
 							</div>
-							<div class="col-5 col-md gallery-thb text-center">
-								<a href="galeria/eventos.html" title=""><img src="img/gallery-evnt-thb-03.jpg" class="img-fluid" alt=""></a>
+							<div class="col-5 col-md-3 gallery-thb">
+								<a href="../img/event_btl_003.jpg" title=""><img src="../img/event_btl_003_thb.jpg" class="img-fluid" alt=""></a>
 							</div>
-							<div class="col-5 col-md gallery-thb text-center">
-								<a href="galeria/eventos.html" title=""><img src="img/gallery-evnt-thb-04.jpg" class="img-fluid" alt=""></a>
+						</div>
+					</div>
+				</div>
+				<div class="row justify-content-between">
+					<div class="col-12 gallery-title">
+						BEACH CRICKET 2018
+					</div>
+					<div class="col-12 gallery-thb-sqr">
+						<div class="row justify-content-center">
+							<div class="col-5 col-md-3 gallery-thb">
+								<a href="../img/event_bck_001.jpg" title=""><img src="../img/event_bck_001_thb.jpg" class="img-fluid" alt=""></a>
 							</div>
 						</div>
 					</div>
