--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
 			<div class="col-8 offset-2 col-md-2 offset-md-0" id="bottom-rrss">
 				<div class="row justify-content-around">
 					<div class="col-4 text-center rs-button" id="rrss-facebook">
-						<a href="https://www.facebook.com/Las-Loicas-Cricket-Chile-354936674988617/" target="_blank" title="Facebook"><i class="fa fa-facebook-square"></i></a>
+						<a href="http://www.facebook.com/Las-Loicas-Cricket-Chile-354936674988617/" target="_blank" title="Facebook"><i class="fa fa-facebook-square"></i></a>
 					</div>
 					<div class="col-4 text-center rs-button" id="rrss-twitter">
 						<a href="https://twitter.com/LasLoicasChile" target="_blank" title="Twitter"><i class="fa fa-twitter-square"></i></a>
