--- a/galeria/entrenamientos.html
+++ b/galeria/entrenamientos.html
@@ -50,13 +50,13 @@
 					  <div class="collapse navbar-collapse" id="navbarSupportedContent">
 					    <ul class="navbar-nav">
 					      <li class="nav-item">
-					        <a class="nav-link" href="index.html">Inicio</a>
+					        <a class="nav-link" href="../index.html">Inicio</a>
 					      </li>
 					      <li class="nav-item">
-					        <a class="nav-link" href="historia.html">Historia</a>
+					        <a class="nav-link" href="../historia.html">Historia</a>
 					      </li>
 					      <li class="nav-item">
-					        <a class="nav-link" href="noticias.html">Noticias</a>
+					        <a class="nav-link" href="../noticias.html">Noticias</a>
 					      </li>
 					      <li class="nav-item active">
 					        <a class="nav-link">Galería <span class="sr-only">(current)</span></a>
