--- a/galeria/entrenamientos.html
+++ b/galeria/entrenamientos.html
@@ -35,7 +35,7 @@
 	<div class="container">
 		<div class="row align-items-center text-center" id="top-bar">
 			<div class="col-12 col-md-2" id="logo">
-				<a href="index.html" title=""><img class="img-fluid top-logo" src="../img/loicas_logo.png" alt="LOGO LOICAS"></img></a>
+				<a href="../index.html" title=""><img class="img-fluid top-logo" src="../img/loicas_logo.png" alt="LOGO LOICAS"></img></a>
 			</div>
 			<div class="col-12 col-md-10" id="top-navbar">
 				<div class="row align-items-center justify-content-center justify-content-md-left">
