mejora de navegación de galeria con insercion de boton volver

--- a/galeria/entrenamientos.html
+++ b/galeria/entrenamientos.html
@@ -59,7 +59,7 @@
 					        <a class="nav-link" href="../noticias.html">Noticias</a>
 					      </li>
 					      <li class="nav-item active">
-					        <a class="nav-link">Galería <span class="sr-only">(current)</span></a>
+					        <a class="nav-link" href="../galeria.html">Galería <span class="sr-only">(current)</span></a>
 					      </li>
 					    </ul>
 					  </div>
@@ -171,6 +171,11 @@
 								<a href="../img/entr_croja_008.jpg" title=""><img src="../img/entr_croja_008_thb.jpg" class="img-fluid" alt=""></a>
 							</div>
 						</div>
+					</div>
+				</div>
+				<div class="row justify-content-between">
+					<div class="col-12 text-center">
+						<a href="../galeria.html" title="volver a Galería"><p>[volver]</p></a>
 					</div>
 				</div>
 			</div>
