--- a/galeria/eventos.html
+++ b/galeria/eventos.html
@@ -59,7 +59,7 @@
 					        <a class="nav-link" href="../noticias.html">Noticias</a>
 					      </li>
 					      <li class="nav-item active">
-					        <a class="nav-link">Galería <span class="sr-only">(current)</span></a>
+					        <a class="nav-link" href="../galeria.html">Galería <span class="sr-only">(current)</span></a>
 					      </li>
 					    </ul>
 					  </div>
@@ -129,6 +129,11 @@
 								<a href="../img/event_bck_001.jpg" title=""><img src="../img/event_bck_001_thb.jpg" class="img-fluid" alt=""></a>
 							</div>
 						</div>
+					</div>
+				</div>
+				<div class="row justify-content-between">
+					<div class="col-12 text-center">
+						<a href="../galeria.html" title="volver a Galería"><small>[volver]</small></a>
 					</div>
 				</div>
 			</div>
