--- a/historia.html
+++ b/historia.html
@@ -117,7 +117,7 @@
 						</ol>
 					</div>
 					<div class="col-12 col-md-8 order-1 order-md-2 text-center">
-						<img class="img-fluid img-team" src="img/2010.jpg" alt="LOGO LOICAS"></img>
+						<img class="img-fluid img-team" src="img/2010.jpg" alt="Selección WSAC 2010"></img>
 					</div>
 				</div>
 				<div class="row content-card"id="wsac-2011">
@@ -143,7 +143,7 @@
 						</ol>
 					</div>
 					<div class="col-12 col-md-8 order-1 order-md-2 text-center">
-						<img class="img-fluid img-team" src="img/2011.jpg" alt="LOGO LOICAS"></img>
+						<img class="img-fluid img-team" src="img/2011.jpg" alt="Selección WSAC 2011"></img>
 					</div>
 				</div>
 				<div class="row content-card"id="serie-2012">
@@ -171,7 +171,7 @@
 						</ol>
 					</div>
 					<div class="col-12 col-md-8 order-1 order-md-2 text-center">
-						<img class="img-fluid img-team" src="img/2012.jpg" alt="LOGO LOICAS"></img>
+						<img class="img-fluid img-team" src="img/2012.jpg" alt="Selección Serie 2012"></img>
 					</div>
 				</div>
 				<div class="row content-card" id="wsac-2013">
@@ -197,7 +197,7 @@
 						</ol>
 					</div>
 					<div class="col-12 col-md-8 order-1 order-md-2 text-center">
-						<img class="img-fluid img-team" src="img/2013.jpg" alt="LOGO LOICAS"></img>
+						<img class="img-fluid img-team" src="img/2013.jpg" alt="Selección WSAC 2013"></img>
 					</div>
 				</div>
 				<div class="row content-card" id="wsac-2015">
@@ -228,7 +228,7 @@
 						</ol>
 					</div>
 					<div class="col-12 col-md-8 order-1 order-md-2 text-center">
-						<img class="img-fluid img-team" src="img/2015.jpg" alt="LOGO LOICAS"></img>
+						<img class="img-fluid img-team" src="img/2015.jpg" alt="Selección WSAC 2015"></img>
 					</div>
 				</div>
 				<div class="row content-card" id="wsac-2017">
@@ -256,7 +256,7 @@
 						</ol>
 					</div>
 					<div class="col-12 col-md-8 order-1 order-md-2 text-center">
-						<img class="img-fluid img-team" src="img/2017.jpg" alt="LOGO LOICAS"></img>
+						<img class="img-fluid img-team" src="img/2017.jpg" alt="Selección WSAC 2017"></img>
 					</div>
 				</div>
 				<div class="row content-card" id="wsac-2018">
@@ -266,7 +266,7 @@
 							<div class="col-2 col-md-1 ml-auto"><a href="#top" class="to-top"><i class="fa fa-chevron-up" aria-hidden="true"></i></a></div>
 						</div>
 					</div>
-					<div class="col-12 col-md-4 order-2 order-md-1 lineup">
+					<div class="col-12 col-md-4 order-2 order-md-1 lineup align-items-center d-none">
 						<ol>
 							<li>Nicole Conejeros (VC)</li>
 							<li>Jeannette Garcés (C)</li>
@@ -284,9 +284,11 @@
 							<li>Marisol Cea</li>
 							<li>Anais Millan</li>
 						</ol>
+						
 					</div>
 					<div class="col-12 col-md-8 order-1 order-md-2 text-center ">
-						<img class="img-fluid img-team" src="img/loicas_logo.png" alt="LOGO LOICAS"></img>
+						<img class="img-fluid img-team top-logo" src="img/loicas_logo.png" alt="LOGO LOICAS"></img>
+						<p class="text-center">Proximamente</p>
 					</div>
 				</div>
 			</div>
