insercion gif-jockey-chapita

--- a/index.html
+++ b/index.html
@@ -109,6 +109,14 @@
 					</div>
 				</div>
 				<div class="row content-card">
+					<div class="col-12">
+						<a href="" title="">
+							<img src="img/gif-jockey-chapita-sm.gif" class="img-fluid d-sm-none" alt="">
+							<img src="img/gif-jockey-chapita.gif" class="img-fluid d-none d-sm-flex" alt="">
+						</a>
+					</div>
+				</div>
+				<div class="row content-card">
 					<div class="col-12">REDES SOCIALES</div>
 					<div class="col-12">
 						<a class="twitter-timeline" data-height="500" href="https://twitter.com/LasLoicasChile?ref_src=twsrc%5Etfw">Tweets by LasLoicasChile</a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script> 
