foto de la semana, correcion README, link gorro/chapitas

--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html>
 <head>
 	<meta charset="utf-8">
@@ -97,7 +97,7 @@
 				<div class="row content-card">
 					<div class="col-12 text-center col-md-10 offset-md-1">FOTOGRAFIA DE LA SEMANA</div>
 					<div class="col-12 text-center col-md-10 offset-md-1">
-						<img src="img/mascota_lacasaroja.jpg" alt="mascota" class="img-fluid img-week">
+						<img src="img/loicas_lanzamiento.jpg" alt="mascota" class="img-fluid img-week">
 					</div>
 				</div>
 			</div>
@@ -110,7 +110,7 @@
 				</div>
 				<div class="row content-card">
 					<div class="col-12">
-						<a href="" title="">
+						<a href="https://www.facebook.com/permalink.php?story_fbid=443876586094625&id=354936674988617" target="_blank" title="">
 							<img src="img/gif-jockey-chapita-sm.gif" class="img-fluid d-sm-none" alt="">
 							<img src="img/gif-jockey-chapita.gif" class="img-fluid d-none d-sm-flex" alt="">
 						</a>
