insercion de contador para el torneo

--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
 	<meta name="theme-color" content="#ffffff">
 	<!-- Custom CSS -->
 	<link rel="stylesheet" type="text/css" href="style.css">
+	<script src="counter.js"></script>
 </head>
 <body>
 	<div class="container">
@@ -106,6 +107,7 @@
 					<div class="col-12">PROXIMOS TORNEOS</div>
 					<div class="col-12 text-center">
 						<img src="img/sac_colombia.png" alt="SAC-Colombia" class="img-fluid">
+						<p><span id="contadorDias"></span></p>
 					</div>
 				</div>
 				<div class="row content-card">
@@ -149,6 +151,9 @@
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
 	<!-- Bootstrap JS -->
 	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js" integrity="sha384-smHYKdLADwkXOn1EmN1qk/HfnUcbVRZyYmZ4qpPea6sjB/pTJ0euyQp0Mk8ck+5T" crossorigin="anonymous"></script>
+	<script>
+		iniciar();
+	</script>
 
 </body>
 </html>
