--- a/historia.html
+++ b/historia.html
@@ -77,13 +77,13 @@
 				<div class="row" id="wsac-nav">
 					<div class="col-12">
 						<ul>
-							<li><a href="#wsac-2010" title="">WSAC Santiago 2010</a></li>
-							<li><a href="#wsac-2011" title="">WSAC Brasilia 2011</a></li>
-							<li><a href="#serie-2012" title="">Serie Chile-Argentina <br> Santiago 2012</a></li>
-							<li><a href="#wsac-2013" title="">WSAC Buenos Aires 2013</a></li>
-							<li><a href="#wsac-2015" title="">WSAC Santiago 2015</a></li>
-							<li><a href="#wsac-2017" title="">WSAC Buenos Aires 2017</a></li>
 							<li><a href="#wsac-2018" title="">WSAC Bogotá 2018</a></li>
+							<li><a href="#wsac-2017" title="">WSAC Buenos Aires 2017</a></li>
+							<li><a href="#wsac-2015" title="">WSAC Santiago 2015</a></li>
+							<li><a href="#wsac-2013" title="">WSAC Buenos Aires 2013</a></li>
+							<li><a href="#serie-2012" title="">Serie Chile-Argentina <br> Santiago 2012</a></li>
+							<li><a href="#wsac-2011" title="">WSAC Brasilia 2011</a></li>
+							<li><a href="#wsac-2010" title="">WSAC Santiago 2010</a></li>
 						</ul>
 					</div>
 				</div>
@@ -92,58 +92,119 @@
 				<div class="row content-card first-card">
 					<h2>HISTORIA</h2>
 				</div>
-				<div class="row content-card" id="wsac-2010">
+				<div class="row content-card" id="wsac-2018">
 					<div class="col-12 sac-title">
 						<div class="row align-items-center">
-							<div class="col-10 col-md-11">WSAC Santiago 2010</div>
+							<div class="col-10 col-md-11">WSAC Bogotá 2018</div>
 							<div class="col-2 col-md-1 ml-auto"><a href="#top" class="to-top"><i class="fa fa-chevron-up" aria-hidden="true"></i></a></div>
 						</div>
 					</div>
-					<div class="col-12 col-md-4 order-2 order-md-1 lineup lineup">
+					<div class="col-12 col-md-4 order-2 order-md-1 lineup align-items-center">
 						<ol>
-							<li>Nicole Conejeros</li>
-							<li>Jeannette Garcés (VC)</li>
-							<li>Kate Smith (C/WK)</li>
-							<li>Alejandra Zúñiga</li>
-							<li>Victoria Miranda</li>
+							<li>Jeannette Garcés (C)</li>
+							<li>Nicole Conejeros (VC)</li>
+							<li>Franchesca Moya (WK)</li>
+							<li>Francisca Riquelme</li>
+							<li>Francisca Gálvez </li>
+							<li>Yaritza Beltrán</li>
+							<li>María José Saavedra</li>
 							<li>Janice Espinoza</li>
 							<li>Jessica Miranda</li>
-							<li>Tamara Riveros (WK)</li>
-							<li>Diana Miranda</li>
-							<li>Shivani Sarani</li>
-							<li>Natalia Chrestia</li>
-							<li>Carolina Muñoz</li>
-							<li>Paulina Henríquez</li>							
+							<li>Arlette Uribe</li>
+							<li>Juliette Guardia</li>
+							<li>Tiara Pueye</li>
+							<li>Ariel Tapia</li>
+							<li>Marisol Cea</li>
+							<li>Anais Millan</li>
 						</ol>
 					</div>
-					<div class="col-12 col-md-8 order-1 order-md-2 text-center">
-						<img class="img-fluid img-team" src="img/2010.jpg" alt="Selección WSAC 2010"></img>
+					<div class="col-12 col-md-8 order-1 order-md-2 text-center ">
+						<img class="img-fluid img-team" src="img/2018.jpg" alt="LOGO LOICAS"></img>
 					</div>
 				</div>
-				<div class="row content-card"id="wsac-2011">
+				<div class="row content-card" id="wsac-2017">
 					<div class="col-12 sac-title">
 						<div class="row align-items-center">
-							<div class="col-10 col-md-11">WSAC Brasilia 2011</div>
+							<div class="col-10 col-md-11">WSAC Buenos Aires 2017</div>
 							<div class="col-2 col-md-1 ml-auto"><a href="#top" class="to-top"><i class="fa fa-chevron-up" aria-hidden="true"></i></a></div>
 						</div>
 					</div>
 					<div class="col-12 col-md-4 order-2 order-md-1 lineup">
 						<ol>
-							<li>Nicole Conejeros</li>
 							<li>Jeannette Garcés (C)</li>
-							<li>Kate Smith (VC/WK)</li>
+							<li>Nicole Conejeros (VC)</li>
+							<li>Yaritza Beltrán (WK)</li>
 							<li>Francisca Riquelme</li>
-							<li>Alejandra Zúñiga</li>
+							<li>Franchesca Moya</li>
 							<li>Francisca Gálvez </li>
-							<li>Victoria Miranda</li>
-							<li>Andrea Navarro</li>
+							<li>María José Saavedra</li>
+							<li>Janice Espinoza</li>
+							<li>Jessica Miranda</li>
 							<li>Jasmina Palma</li>
-							<li>Tamara Riveros (WK)</li>
-							<li>Abigail Jara</li>
+							<li>Arlette Uribe</li>
+							<li>Juliette Guardia</li>
+							<li>Ariel Tapia</li>
 						</ol>
 					</div>
 					<div class="col-12 col-md-8 order-1 order-md-2 text-center">
-						<img class="img-fluid img-team" src="img/2011.jpg" alt="Selección WSAC 2011"></img>
+						<img class="img-fluid img-team" src="img/2017.jpg" alt="Selección WSAC 2017"></img>
+					</div>
+				</div>
+				<div class="row content-card" id="wsac-2015">
+					<div class="col-12 sac-title">
+						<div class="row align-items-center">
+							<div class="col-10 col-md-11">WSAC Santiago 2015</div>
+							<div class="col-2 col-md-1 ml-auto"><a href="#top" class="to-top"><i class="fa fa-chevron-up" aria-hidden="true"></i></a></div>
+						</div>
+					</div>
+					<div class="col-12 col-md-4 order-2 order-md-1 lineup">
+						<ol>
+							<li>Francisca Gálvez (C)</li>
+							<li>Franchesca Moya (WK)</li>
+							<li>Nicole Conejeros</li>
+							<li>Kate Smith</li>
+							<li>Natalie Toose</li>
+							<li>Sabina González</li>
+							<li>Belén González</li>
+							<li>Jessica Kindal</li>
+							<li>Victoria Azola</li>
+							<li>Kattya Aguayo</li>
+							<li>Tiara Pueye</li>
+							<li>Valeria Asenjo</li>
+							<li>Jacqueline Sepúlveda</li>
+							<li>Paula Díaz</li>
+							<li>Camila Gallardo</li>
+							<li>F. Rojas</li>
+						</ol>
+					</div>
+					<div class="col-12 col-md-8 order-1 order-md-2 text-center">
+						<img class="img-fluid img-team" src="img/2015.jpg" alt="Selección WSAC 2015"></img>
+					</div>
+				</div>
+				<div class="row content-card" id="wsac-2013">
+					<div class="col-12 sac-title">
+						<div class="row align-items-center">
+							<div class="col-10 col-md-11">WSAC Buenos Aires 2013</div>
+							<div class="col-2 col-md-1 ml-auto"><a href="#top" class="to-top"><i class="fa fa-chevron-up" aria-hidden="true"></i></a></div>
+						</div>
+					</div>
+					<div class="col-12 col-md-4 order-2 order-md-1 lineup">
+						<ol>
+							<li>Jeannette Garcés (C)</li>
+							<li>Kate Smith (VC)</li>
+							<li>Franchesca Moya (WK)</li>
+							<li>Nicole Conejeros</li>
+							<li>Francisca Riquelme</li>
+							<li>Alejandra Zúñiga</li>
+							<li>Yaritza Beltrán</li>
+							<li>Andrea Navarro</li>
+							<li>María José Saavedra</li>
+							<li>Giselle Budini</li>
+							<li>Giovanna Barraza</li>
+						</ol>
+					</div>
+					<div class="col-12 col-md-8 order-1 order-md-2 text-center">
+						<img class="img-fluid img-team" src="img/2013.jpg" alt="Selección WSAC 2013"></img>
 					</div>
 				</div>
 				<div class="row content-card"id="serie-2012">
@@ -161,10 +222,10 @@
 						<ol>
 							<li>Jeannette Garcés (C)</li>
 							<li>Kate Smith (VC/WK)</li>
+							<li>Yaritza Beltrán (WK)</li>
 							<li>Francisca Riquelme</li>
 							<li>Franchesca Moya</li>
 							<li>Alejandra Zúñiga</li>
-							<li>Yaritza Beltrán (WK)</li>
 							<li>Victoria Miranda</li>
 							<li>Andrea Navarro</li>
 							<li>María José Saavedra</li>
@@ -174,123 +235,60 @@
 						<img class="img-fluid img-team" src="img/2012.jpg" alt="Selección Serie 2012"></img>
 					</div>
 				</div>
-				<div class="row content-card" id="wsac-2013">
+				<div class="row content-card"id="wsac-2011">
 					<div class="col-12 sac-title">
 						<div class="row align-items-center">
-							<div class="col-10 col-md-11">WSAC Buenos Aires 2013</div>
+							<div class="col-10 col-md-11">WSAC Brasilia 2011</div>
 							<div class="col-2 col-md-1 ml-auto"><a href="#top" class="to-top"><i class="fa fa-chevron-up" aria-hidden="true"></i></a></div>
 						</div>
 					</div>
 					<div class="col-12 col-md-4 order-2 order-md-1 lineup">
 						<ol>
-							<li>Nicole Conejeros</li>
 							<li>Jeannette Garcés (C)</li>
-							<li>Kate Smith (VC)</li>
+							<li>Kate Smith (VC/WK)</li>
+							<li>Tamara Riveros (WK)</li>
+							<li>Nicole Conejeros</li>
 							<li>Francisca Riquelme</li>
-							<li>Franchesca Moya (WK)</li>
 							<li>Alejandra Zúñiga</li>
-							<li>Yaritza Beltrán</li>
+							<li>Francisca Gálvez </li>
+							<li>Victoria Miranda</li>
 							<li>Andrea Navarro</li>
-							<li>María José Saavedra</li>
-							<li>Giselle Budini</li>
-							<li>Giovanna Barraza</li>
-						</ol>
-					</div>
-					<div class="col-12 col-md-8 order-1 order-md-2 text-center">
-						<img class="img-fluid img-team" src="img/2013.jpg" alt="Selección WSAC 2013"></img>
-					</div>
-				</div>
-				<div class="row content-card" id="wsac-2015">
-					<div class="col-12 sac-title">
-						<div class="row align-items-center">
-							<div class="col-10 col-md-11">WSAC Santiago 2015</div>
-							<div class="col-2 col-md-1 ml-auto"><a href="#top" class="to-top"><i class="fa fa-chevron-up" aria-hidden="true"></i></a></div>
-						</div>
-					</div>
-					<div class="col-12 col-md-4 order-2 order-md-1 lineup">
-						<ol>
-							<li>Nicole Conejeros</li>
-							<li>Kate Smith</li>
-							<li>Franchesca Moya (WK)</li>
-							<li>Francisca Gálvez (C)</li>
-							<li>Natalie Toose</li>
-							<li>Sabina González</li>
-							<li>Belén González</li>
-							<li>Jessica Kindal</li>
-							<li>Victoria Azola</li>
-							<li>Kattya Aguayo</li>
-							<li>Tiara Pueye</li>
-							<li>Valeria Asenjo</li>
-							<li>Jacqueline Sepúlveda</li>
-							<li>Paula Díaz</li>
-							<li>Camila Gallardo</li>
-							<li>F Rojas</li>
-						</ol>
-					</div>
-					<div class="col-12 col-md-8 order-1 order-md-2 text-center">
-						<img class="img-fluid img-team" src="img/2015.jpg" alt="Selección WSAC 2015"></img>
-					</div>
-				</div>
-				<div class="row content-card" id="wsac-2017">
-					<div class="col-12 sac-title">
-						<div class="row align-items-center">
-							<div class="col-10 col-md-11">WSAC Buenos Aires 2017</div>
-							<div class="col-2 col-md-1 ml-auto"><a href="#top" class="to-top"><i class="fa fa-chevron-up" aria-hidden="true"></i></a></div>
-						</div>
-					</div>
-					<div class="col-12 col-md-4 order-2 order-md-1 lineup">
-						<ol>
-							<li>Nicole Conejeros (VC)</li>
-							<li>Jeannette Garcés (C)</li>
-							<li>Francisca Riquelme</li>
-							<li>Franchesca Moya</li>
-							<li>Francisca Gálvez </li>
-							<li>Yaritza Beltrán (WK)</li>
-							<li>María José Saavedra</li>
-							<li>Janice Espinoza</li>
-							<li>Jessica Miranda</li>
 							<li>Jasmina Palma</li>
-							<li>Arlette Uribe</li>
-							<li>Juliette Guardia</li>
-							<li>Ariel Tapia</li>
+							<li>Abigail Jara</li>
 						</ol>
 					</div>
 					<div class="col-12 col-md-8 order-1 order-md-2 text-center">
-						<img class="img-fluid img-team" src="img/2017.jpg" alt="Selección WSAC 2017"></img>
+						<img class="img-fluid img-team" src="img/2011.jpg" alt="Selección WSAC 2011"></img>
 					</div>
 				</div>
-				<div class="row content-card" id="wsac-2018">
+				<div class="row content-card" id="wsac-2010">
 					<div class="col-12 sac-title">
 						<div class="row align-items-center">
-							<div class="col-10 col-md-11">WSAC Bogotá 2018</div>
+							<div class="col-10 col-md-11">WSAC Santiago 2010</div>
 							<div class="col-2 col-md-1 ml-auto"><a href="#top" class="to-top"><i class="fa fa-chevron-up" aria-hidden="true"></i></a></div>
 						</div>
 					</div>
-					<div class="col-12 col-md-4 order-2 order-md-1 lineup align-items-center d-none">
+					<div class="col-12 col-md-4 order-2 order-md-1 lineup lineup">
 						<ol>
-							<li>Nicole Conejeros (VC)</li>
-							<li>Jeannette Garcés (C)</li>
-							<li>Francisca Riquelme</li>
-							<li>Franchesca Moya (WK)</li>
-							<li>Francisca Gálvez </li>
-							<li>Yaritza Beltrán</li>
-							<li>María José Saavedra</li>
+							<li>Kate Smith (C/WK)</li>
+							<li>Jeannette Garcés (VC)</li>
+							<li>Tamara Riveros (WK)</li>
+							<li>Nicole Conejeros</li>
+							<li>Alejandra Zúñiga</li>
+							<li>Victoria Miranda</li>
 							<li>Janice Espinoza</li>
 							<li>Jessica Miranda</li>
-							<li>Arlette Uribe</li>
-							<li>Juliette Guardia</li>
-							<li>Tiara Pueye</li>
-							<li>Ariel Tapia</li>
-							<li>Marisol Cea</li>
-							<li>Anais Millan</li>
+							<li>Diana Miranda</li>
+							<li>Shivani Sarani</li>
+							<li>Natalia Chrestia</li>
+							<li>Carolina Muñoz</li>
+							<li>Paulina Henríquez</li>							
 						</ol>
-						
 					</div>
-					<div class="col-12 col-md-8 order-1 order-md-2 text-center ">
-						<img class="img-fluid img-team top-logo" src="img/loicas_logo.png" alt="LOGO LOICAS"></img>
-						<p class="text-center">Proximamente</p>
+					<div class="col-12 col-md-8 order-1 order-md-2 text-center">
+						<img class="img-fluid img-team" src="img/2010.jpg" alt="Selección WSAC 2010"></img>
 					</div>
-				</div>
+				</div>	
 			</div>
 		</div>
 		<div class="row justify-content-between align-items-center" id="bottom-bar">
