pequeñas correcciones en enlace volver

--- a/galeria/entrenamientos.html
+++ b/galeria/entrenamientos.html
@@ -175,7 +175,7 @@
 				</div>
 				<div class="row justify-content-between">
 					<div class="col-12 text-center">
-						<a href="../galeria.html" title="volver a Galería"><p>[volver]</p></a>
+						<a href="../galeria.html" title="volver a Galería"><small>[volver]</small></a>
 					</div>
 				</div>
 			</div>
