cambio portada sm y correcciones menores

--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
 						</div>
 					</div>
 					<div class="col-12 d-sm-none">
-						<img src="img/title-sm.jpg" alt="LasLoicasCricketChile" class="img-fluid">
+						<img src="img/2018.jpg" alt="LasLoicasCricketChile" class="img-fluid">
 					</div>
 				</div>
 				<div class="row content-card">
