--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
 				<div class="row content-card">
 					<div class="col-12 text-center col-md-10 offset-md-1">FOTOGRAFIA DE LA SEMANA</div>
 					<div class="col-12 text-center col-md-10 offset-md-1">
-						<img src="img/convocatoria_2018.jpg" alt="mascota" class="img-fluid img-week">
+						<img src="img/loicas_aeropuerto.jpg" alt="mascota" class="img-fluid img-week">
 					</div>
 				</div>
 			</div>
