--- a/index.html
+++ b/index.html
@@ -104,10 +104,12 @@
 			</div>
 			<div class="col-12 col-md-4">
 				<div class="row content-card top-card">
-					<div class="col-12">PROXIMOS TORNEOS</div>
-					<div class="col-12 text-center">
-						<img src="img/sac_colombia.png" alt="SAC-Colombia" class="img-fluid">
-						<p><span id="contadorDias"></span></p>
+					<div class="col-12">TORNEOS</div>
+					<div class="col-12">
+						<div class="row align-items-center">
+							<div class="col col-md-5 offset-md-1"><img src="img/sac_colombia.png" alt="SAC-Colombia" class="img-fluid"></div>
+							<div class="col col-md-5"><span id="vicecampeonas">VICECAMPEONAS BOGOTA 2018</span></div>
+						</div>
 					</div>
 				</div>
 				<div class="row content-card">
