--- a/index.html
+++ b/index.html
@@ -104,11 +104,11 @@
 			</div>
 			<div class="col-12 col-md-4">
 				<div class="row content-card top-card">
-					<div class="col-12">TORNEOS</div>
+					<div class="col-12">PROXIMO TORNEO</div>
 					<div class="col-12">
-						<div class="row align-items-center">
-							<div class="col col-md-5 offset-md-1"><img src="img/sac_colombia.png" alt="SAC-Colombia" class="img-fluid"></div>
-							<div class="col col-md-5"><span id="vicecampeonas">VICECAMPEONAS BOGOTA 2018</span></div>
+						<div class="row align-items-center text-center">
+							<div class="col-10 col-md-10 offset-1"><a href="https://www.facebook.com/LimaSAC19" target="_blank"><img src="img/sac_peru.png" alt="SAC-Colombia" class="img-fluid"></a></div>
+							<div class="col-10 col-md-10 offset-1"><span id="contadorDias"></span></div>
 						</div>
 					</div>
 				</div>
