actualizacion historia lima 2019

--- a/historia.html
+++ b/historia.html
@@ -77,6 +77,7 @@
 				<div class="row" id="wsac-nav">
 					<div class="col-12">
 						<ul>
+							<li><a href="#wsac-2019" title="">WSAC Lima 2019</a></li>
 							<li><a href="#wsac-2018" title="">WSAC Bogotá 2018</a></li>
 							<li><a href="#wsac-2017" title="">WSAC Buenos Aires 2017</a></li>
 							<li><a href="#wsac-2015" title="">WSAC Santiago 2015</a></li>
@@ -91,6 +92,33 @@
 			<div class="col-12 col-lg-9 history-panel">
 				<div class="row content-card first-card">
 					<h2>HISTORIA</h2>
+				</div>
+				<div class="row content-card" id="wsac-2019">
+					<div class="col-12 sac-title">
+						<div class="row align-items-center">
+							<div class="col-10 col-md-11">WSAC Lima 2019</div>
+							<div class="col-2 col-md-1 ml-auto"><a href="#top" class="to-top"><i class="fa fa-chevron-up" aria-hidden="true"></i></a></div>
+						</div>
+					</div>
+					<div class="col-12 col-md-4 order-2 order-md-1 lineup align-items-center">
+						<ol>
+							<li>Yaritza Beltrán (WK)</li>
+							<li>Nicole Conejeros</li>
+							<li>Francisca Gálvez </li>
+							<li>Jeannette Garcés (C)</li>
+							<li>Juliette Guardia</li>
+							<li>Jessica Miranda</li>
+							<li>Franchesca Moya (WK)</li>
+							<li>Camila Oyarce</li>
+							<li>Constanza Oyarce</li>
+							<li>Magdalena Pino</li>
+							<li>Tiara Pueye</li>
+							<li>María José Saavedra</li>
+						</ol>
+					</div>
+					<div class="col-12 col-md-8 order-1 order-md-2 text-center ">
+						<img class="img-fluid img-team" src="img/loicas_logo.png" alt="Seleccion WSAC 2018"></img>
+					</div>
 				</div>
 				<div class="row content-card" id="wsac-2018">
 					<div class="col-12 sac-title">
