--- a/index.html
+++ b/index.html
@@ -79,13 +79,13 @@
 					<div class="col-12 col-md-10 offset-md-1">BIENVENIDO A NUESTRA WEB</div>
 					<div class="col-12 d-none d-sm-flex col-md-10 offset-md-1 justify-content-between" >
 						<div class="col img-title">
-							<img src="img/title-1-thb.jpg" alt="LasLoicas" class="img-fluid">
+							<img src="img/title-1-thb-2019.jpg" alt="LasLoicas" class="img-fluid">
 						</div>
 						<div class="col img-title">
-							<img src="img/title-2-thb.jpg" alt="LasLoicas" class="img-fluid">
+							<img src="img/title-4-thb-2019.jpg" alt="LasLoicas" class="img-fluid">
 						</div>
 						<div class="col img-title">
-							<img src="img/title-3-thb.jpg" alt="LasLoicas" class="img-fluid">
+							<img src="img/title-2-thb-2019.jpg" alt="LasLoicas" class="img-fluid">
 						</div>
 					</div>
 					<div class="col-12 d-sm-none">
