--- a/index.html
+++ b/index.html
@@ -30,7 +30,6 @@
 	<meta name="theme-color" content="#ffffff">
 	<!-- Custom CSS -->
 	<link rel="stylesheet" type="text/css" href="style.css">
-	<script src="counter.js"></script>
 </head>
 <body>
 	<div class="container">
@@ -104,11 +103,11 @@
 			</div>
 			<div class="col-12 col-md-4">
 				<div class="row content-card top-card">
-					<div class="col-12">PROXIMO TORNEO</div>
+					<div class="col-12">FELICITACIONES</div>
 					<div class="col-12">
 						<div class="row align-items-center text-center">
 							<div class="col-10 col-md-10 offset-1"><a href="https://www.facebook.com/LimaSAC19" target="_blank"><img src="img/sac_peru.png" alt="SAC-Colombia" class="img-fluid"></a></div>
-							<div class="col-10 col-md-10 offset-1"><span id="contadorDias"></span></div>
+							<div class="col-10 col-md-10 offset-1"><span id="contadorDias">Tercer Lugar</span></div>
 						</div>
 					</div>
 				</div>
@@ -153,9 +152,6 @@
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
 	<!-- Bootstrap JS -->
 	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js" integrity="sha384-smHYKdLADwkXOn1EmN1qk/HfnUcbVRZyYmZ4qpPea6sjB/pTJ0euyQp0Mk8ck+5T" crossorigin="anonymous"></script>
-	<script>
-		iniciar();
-	</script>
 
 </body>
 </html>
