actualizacion foto bogota en historia

--- a/historia.html
+++ b/historia.html
@@ -117,7 +117,7 @@
 						</ol>
 					</div>
 					<div class="col-12 col-md-8 order-1 order-md-2 text-center ">
-						<img class="img-fluid img-team" src="img/loicas_logo.png" alt="Seleccion WSAC 2018"></img>
+						<img class="img-fluid img-team" src="img/2019.jpg" alt="Seleccion WSAC 2018"></img>
 					</div>
 				</div>
 				<div class="row content-card" id="wsac-2018">
