--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 <html>
 <head>
 	<meta charset="utf-8">
@@ -97,7 +97,7 @@
 				<div class="row content-card">
 					<div class="col-12 text-center col-md-10 offset-md-1">FOTOGRAFIA DE LA SEMANA</div>
 					<div class="col-12 text-center col-md-10 offset-md-1">
-						<img src="img/embajadora_portada.jpg" alt="loicas junto a la embajadora de india" class="img-fluid img-week">
+						<img src="img/lima_portada.jpg" alt="loicas junto a la embajadora de india" class="img-fluid img-week">
 					</div>
 				</div>
 			</div>
